--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,11 @@
+/* @tailwind base;
+@tailwind components; */
+@tailwind utilities;
+
 /*! destyle.css v2.0.2 | MIT License | https://github.com/nicolas-cusan/destyle.css */
 
 /* Reset box-model and set borders */
 /* ============================================ */
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 *,
 ::before,
@@ -28,7 +28,6 @@ html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
   -webkit-tap-highlight-color: transparent; /* 3*/
-  background-color: rgb(230, 230, 230);
 }
 
 /* Sections */
@@ -40,7 +39,6 @@ html {
 
 body {
   margin: 0;
-  color: #333333;
 }
 
 /**
@@ -88,7 +86,7 @@ ul,
 ol {
   margin: 0;
   padding: 0;
-  list-style: none;
+  /* list-style: none; */
 }
 
 /* Lists (definition) */
